tests/iptables-save-InternalFW
# Generated by iptables-save v1.4.9 on Mon Sep 27 22:38:04 2010
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.66.1.1/32 -d 10.66.2.0/24 -i eth1 -p tcp -m tcp --dport 22 -j LOG --log-prefix "ssh_mgmt" --log-level 2 
-A INPUT -s 10.66.1.1/32 -d 10.66.2.0/24 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 10.66.1.3/32 -d 10.66.1.2/32 -i eth0 -p tcp -m multiport --dports 143,585,993 -j LOG --log-prefix "imap" --log-level 2 
-A INPUT -s 10.66.1.3/32 -d 10.66.1.2/32 -i eth0 -p tcp -m multiport --dports 143,585,993 -j ACCEPT 
-A INPUT -i eth0 -j LOG --log-prefix "default" --log-level 1 
-A INPUT -i eth0 -j DROP 
-A INPUT -i eth1 -j LOG --log-prefix "default" --log-level 1 
-A INPUT -i eth1 -j DROP 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 10.66.1.1/32 -d 10.66.2.0/24 -p tcp -m tcp --dport 22 -j LOG --log-prefix "ssh_mgmt" --log-level 2 
-A FORWARD -s 10.66.1.1/32 -d 10.66.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -s 10.66.2.2/32 -d 10.66.1.3/32 -p tcp -m tcp --dport 6660:6669 -j LOG --log-prefix "irc" --log-level 0 
-A FORWARD -s 10.66.2.2/32 -d 10.66.1.3/32 -p tcp -m tcp --dport 6660:6669 -j ACCEPT 
-A FORWARD -s 10.66.1.3/32 -d 172.16.2.223/32 -p udp -m udp --dport 123 -j LOG --log-prefix "ntp" --log-level 0 
-A FORWARD -s 10.66.1.3/32 -d 172.16.2.223/32 -p udp -m udp --dport 123 -j ACCEPT 
-A FORWARD -s 10.66.2.2/32 -d 172.16.2.223/32 -p udp -m udp --dport 123 -j LOG --log-prefix "ntp" --log-level 0 
-A FORWARD -s 10.66.2.2/32 -d 172.16.2.223/32 -p udp -m udp --dport 123 -j ACCEPT 
-A FORWARD -s 10.66.2.2/32 -d 10.66.1.3/32 -p udp -m udp --dport 123 -j LOG --log-prefix "ntp" --log-level 0 
-A FORWARD -s 10.66.2.2/32 -d 10.66.1.3/32 -p udp -m udp --dport 123 -j ACCEPT 
-A FORWARD -j LOG --log-prefix "default" --log-level 1 
-A FORWARD -j DROP 
-A FORWARD -j LOG --log-prefix "default" --log-level 1 
-A FORWARD -j DROP 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -s 10.66.1.2/32 -d 10.66.1.1/32 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -s 10.66.2.1/32 -d 10.66.2.2/32 -o eth1 -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -o eth0 -j LOG --log-prefix "default" --log-level 1 
-A OUTPUT -o eth0 -j DROP 
-A OUTPUT -o eth1 -j LOG --log-prefix "default" --log-level 1 
-A OUTPUT -o eth1 -j DROP 
COMMIT
# Completed on Mon Sep 27 22:38:04 2010
